# keel

./: .gitignore  LICENSE  README.md  USAGE.md  keel-prd.md  pyproject.toml
src/keel/: __init__.py  cli.py  errors.py
src/keel/commands/: digest.py  new.py  project.py  scan.py  sources.py  status.py
src/keel/core/: claude.py  config.py  state.py  workspace.py
src/keel/fetchers/: brave.py  rss.py
src/keel/formatters/: digest_output.py  scan_output.py
src/keel/processors/: pdf.py  ranking.py
src/keel/prompts/: digest_prompts.py  scan_prompts.py
src/keel/utils/: console.py  network.py  slugify.py
